src/generated/generated/projectParser.java
// Generated from D:/ProyectoCompiladores\projectParser.g4 by ANTLR 4.7
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class projectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, LET=3, RETURN=4, PyCOMMA=5, ASSIGN=6, PIZQ=7, PDER=8, 
		PCIZQ=9, PCDER=10, LLAVEIZQ=11, LLAVEDER=12, VIR=13, DOSPUN=14, COMMA=15, 
		COMILLA=16, WS=17, FULL_COMMENT=18, LINE_COMMENT=19, LEN=20, FIRST=21, 
		LAST=22, REST=23, PUSH=24, FN=25, PUTS=26, IF=27, ELSE=28, SUM=29, SUB=30, 
		ADDOPERATOR=31, MUL=32, DIV=33, MULOPERATOR=34, MENOR=35, MENORIGUAL=36, 
		MAYOR=37, MAYORIGUAL=38, IGUAL=39, DISTINTO=40, STRING=41, INTEGER=42, 
		IDENTIFIER=43;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_letStatement = 2, RULE_returnStatement = 3, 
		RULE_expressionStatement = 4, RULE_expression = 5, RULE_comparison = 6, 
		RULE_additionExpression = 7, RULE_multiplicationExpression = 8, RULE_elementExpression = 9, 
		RULE_elementAccess = 10, RULE_callExpression = 11, RULE_primitiveExpression = 12, 
		RULE_arrayFunctions = 13, RULE_arrayLiteral = 14, RULE_functionLiteral = 15, 
		RULE_functionParameters = 16, RULE_moreIdentifiers = 17, RULE_hashLiteral = 18, 
		RULE_hashContent = 19, RULE_moreHashContent = 20, RULE_expressionList = 21, 
		RULE_moreExpressions = 22, RULE_printExpression = 23, RULE_ifExpression = 24, 
		RULE_blockStatement = 25;
	public static final String[] ruleNames = {
		"program", "statement", "letStatement", "returnStatement", "expressionStatement", 
		"expression", "comparison", "additionExpression", "multiplicationExpression", 
		"elementExpression", "elementAccess", "callExpression", "primitiveExpression", 
		"arrayFunctions", "arrayLiteral", "functionLiteral", "functionParameters", 
		"moreIdentifiers", "hashLiteral", "hashContent", "moreHashContent", "expressionList", 
		"moreExpressions", "printExpression", "ifExpression", "blockStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'true'", "'false'", "'let'", "'return'", "';'", "'='", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'~'", "':'", "','", "'\"'", null, null, null, 
		"'len'", "'first'", "'last'", "'rest'", "'push'", "'fn'", "'puts'", "'if'", 
		"'else'", "'+'", "'-'", null, "'*'", "'/'", null, "'<'", "'<='", "'>'", 
		"'>='", "'=='", "'!='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TRUE", "FALSE", "LET", "RETURN", "PyCOMMA", "ASSIGN", "PIZQ", "PDER", 
		"PCIZQ", "PCDER", "LLAVEIZQ", "LLAVEDER", "VIR", "DOSPUN", "COMMA", "COMILLA", 
		"WS", "FULL_COMMENT", "LINE_COMMENT", "LEN", "FIRST", "LAST", "REST", 
		"PUSH", "FN", "PUTS", "IF", "ELSE", "SUM", "SUB", "ADDOPERATOR", "MUL", 
		"DIV", "MULOPERATOR", "MENOR", "MENORIGUAL", "MAYOR", "MAYORIGUAL", "IGUAL", 
		"DISTINTO", "STRING", "INTEGER", "IDENTIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "projectParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public projectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgASTContext extends ProgramContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgASTContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterProgAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitProgAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitProgAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LET) | (1L << RETURN) | (1L << PIZQ) | (1L << PCIZQ) | (1L << LLAVEIZQ) | (1L << LEN) | (1L << FIRST) | (1L << LAST) | (1L << REST) | (1L << PUSH) | (1L << FN) | (1L << PUTS) | (1L << IF) | (1L << STRING) | (1L << INTEGER) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(52);
				statement();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StLetASTContext extends StatementContext {
		public TerminalNode LET() { return getToken(projectParser.LET, 0); }
		public LetStatementContext letStatement() {
			return getRuleContext(LetStatementContext.class,0);
		}
		public StLetASTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterStLetAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitStLetAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitStLetAST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StReturnASTContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(projectParser.RETURN, 0); }
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public StReturnASTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterStReturnAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitStReturnAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitStReturnAST(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StExpressASTContext extends StatementContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public StExpressASTContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterStExpressAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitStExpressAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitStExpressAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				_localctx = new StLetASTContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(LET);
				setState(59);
				letStatement();
				}
				break;
			case RETURN:
				_localctx = new StReturnASTContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(RETURN);
				setState(61);
				returnStatement();
				}
				break;
			case TRUE:
			case FALSE:
			case PIZQ:
			case PCIZQ:
			case LLAVEIZQ:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case STRING:
			case INTEGER:
			case IDENTIFIER:
				_localctx = new StExpressASTContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				expressionStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetStatementContext extends ParserRuleContext {
		public LetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letStatement; }
	 
		public LetStatementContext() { }
		public void copyFrom(LetStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LetStatementASTContext extends LetStatementContext {
		public TerminalNode IDENTIFIER() { return getToken(projectParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(projectParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PyCOMMA() { return getToken(projectParser.PyCOMMA, 0); }
		public LetStatementASTContext(LetStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterLetStatementAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitLetStatementAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitLetStatementAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetStatementContext letStatement() throws RecognitionException {
		LetStatementContext _localctx = new LetStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_letStatement);
		try {
			_localctx = new LetStatementASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(IDENTIFIER);
			setState(66);
			match(ASSIGN);
			setState(67);
			expression();
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PyCOMMA:
				{
				setState(68);
				match(PyCOMMA);
				}
				break;
			case EOF:
			case TRUE:
			case FALSE:
			case LET:
			case RETURN:
			case PIZQ:
			case PCIZQ:
			case LLAVEIZQ:
			case LLAVEDER:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case STRING:
			case INTEGER:
			case IDENTIFIER:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	 
		public ReturnStatementContext() { }
		public void copyFrom(ReturnStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnStatementASTContext extends ReturnStatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PyCOMMA() { return getToken(projectParser.PyCOMMA, 0); }
		public ReturnStatementASTContext(ReturnStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterReturnStatementAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitReturnStatementAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitReturnStatementAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_returnStatement);
		try {
			_localctx = new ReturnStatementASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			expression();
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PyCOMMA:
				{
				setState(73);
				match(PyCOMMA);
				}
				break;
			case EOF:
			case TRUE:
			case FALSE:
			case LET:
			case RETURN:
			case PIZQ:
			case PCIZQ:
			case LLAVEIZQ:
			case LLAVEDER:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case STRING:
			case INTEGER:
			case IDENTIFIER:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionStatementContext extends ParserRuleContext {
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStatement; }
	 
		public ExpressionStatementContext() { }
		public void copyFrom(ExpressionStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExpressionStatementASTContext extends ExpressionStatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PyCOMMA() { return getToken(projectParser.PyCOMMA, 0); }
		public ExpressionStatementASTContext(ExpressionStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterExpressionStatementAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitExpressionStatementAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitExpressionStatementAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expressionStatement);
		try {
			_localctx = new ExpressionStatementASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			expression();
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PyCOMMA:
				{
				setState(78);
				match(PyCOMMA);
				}
				break;
			case EOF:
			case TRUE:
			case FALSE:
			case LET:
			case RETURN:
			case PIZQ:
			case PCIZQ:
			case LLAVEIZQ:
			case LLAVEDER:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case STRING:
			case INTEGER:
			case IDENTIFIER:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExpressionASTContext extends ExpressionContext {
		public AdditionExpressionContext additionExpression() {
			return getRuleContext(AdditionExpressionContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public ExpressionASTContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterExpressionAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitExpressionAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitExpressionAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			_localctx = new ExpressionASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			additionExpression();
			setState(83);
			comparison();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
	 
		public ComparisonContext() { }
		public void copyFrom(ComparisonContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ComparisonASTContext extends ComparisonContext {
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public List<TerminalNode> MENOR() { return getTokens(projectParser.MENOR); }
		public TerminalNode MENOR(int i) {
			return getToken(projectParser.MENOR, i);
		}
		public List<TerminalNode> MAYOR() { return getTokens(projectParser.MAYOR); }
		public TerminalNode MAYOR(int i) {
			return getToken(projectParser.MAYOR, i);
		}
		public List<TerminalNode> MAYORIGUAL() { return getTokens(projectParser.MAYORIGUAL); }
		public TerminalNode MAYORIGUAL(int i) {
			return getToken(projectParser.MAYORIGUAL, i);
		}
		public List<TerminalNode> IGUAL() { return getTokens(projectParser.IGUAL); }
		public TerminalNode IGUAL(int i) {
			return getToken(projectParser.IGUAL, i);
		}
		public ComparisonASTContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterComparisonAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitComparisonAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitComparisonAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparison);
		int _la;
		try {
			_localctx = new ComparisonASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MENOR) | (1L << MAYOR) | (1L << MAYORIGUAL) | (1L << IGUAL))) != 0)) {
				{
				{
				setState(85);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MENOR) | (1L << MAYOR) | (1L << MAYORIGUAL) | (1L << IGUAL))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(86);
				additionExpression();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditionExpressionContext extends ParserRuleContext {
		public AdditionExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additionExpression; }
	 
		public AdditionExpressionContext() { }
		public void copyFrom(AdditionExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AdditionExpressionASTContext extends AdditionExpressionContext {
		public List<MultiplicationExpressionContext> multiplicationExpression() {
			return getRuleContexts(MultiplicationExpressionContext.class);
		}
		public MultiplicationExpressionContext multiplicationExpression(int i) {
			return getRuleContext(MultiplicationExpressionContext.class,i);
		}
		public List<TerminalNode> ADDOPERATOR() { return getTokens(projectParser.ADDOPERATOR); }
		public TerminalNode ADDOPERATOR(int i) {
			return getToken(projectParser.ADDOPERATOR, i);
		}
		public AdditionExpressionASTContext(AdditionExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterAdditionExpressionAST(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitAdditionExpressionAST(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitAdditionExpressionAST(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdditionExpressionContext additionExpression() throws RecognitionException {
		AdditionExpressionContext _localctx = new AdditionExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_additionExpression);
		int _la;
		try {
			_localctx = new AdditionExpressionASTContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			multiplicationExpression();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ADDOPERATOR) {
				{
				{
				setState(93);
				match(ADDOPERATOR);
				setState(94);
				multiplicationExpression();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplicationExpressionContext extends ParserRuleContext {
		public MultiplicationExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicationExpression; }
	 
		public MultiplicationExpressionContext() { }
		public void copyFrom(MultiplicationExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiplicationExpressionASPContext extends MultiplicationExpressionContext {
		public List<ElementExpressionContext> elementExpression() {
			return getRuleContexts(ElementExpressionContext.class);
		}
		public ElementExpressionContext elementExpression(int i) {
			return getRuleContext(ElementExpressionContext.class,i);
		}
		public List<TerminalNode> MULOPERATOR() { return getTokens(projectParser.MULOPERATOR); }
		public TerminalNode MULOPERATOR(int i) {
			return getToken(projectParser.MULOPERATOR, i);
		}
		public MultiplicationExpressionASPContext(MultiplicationExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).enterMultiplicationExpressionASP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectParserListener ) ((projectParserListener)listener).exitMultiplicationExpressionASP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projectParserVisitor ) return ((projectParserVisitor<? extends T>)visitor).visitMultiplicationExpressionASP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicationExpressionContext multiplicationExpression() throws RecognitionException {
		MultiplicationExpressionContext _localctx = new MultiplicationExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_multiplicationExpression);
		int _la;
		try {
			_localctx = new MultiplicationExpressionASPContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			elementExpression();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULOPERATOR) {
				{
				{
				setState(101);
				match(MULOPERATOR);
				setState(102);
				elementExpression();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
